# CIEBII

./: Cargo.toml  README.md
ciebii_lib/: Cargo.toml
ciebii_lib/src/: checksum.rs  chunk.rs  file.rs  header.rs  io.rs  lib.rs  rgb.rs
client/: .gitignore  Cargo.toml  img.cib
client/src/: convert.rs  icons.rs  main.rs  render.rs
shitfile_lib/: Cargo.toml
shitfile_lib/src/: chunk.rs  error.rs  file.rs  header.rs  io.rs  rgb.rs
