[package]
name = "cib"
version = "0.1.0"
edition = "2021"
authors = ["Squirrelcoding"]
about = "A custom file format."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.4", features = ["derive"] }
colored = "2.0.0"
image = "0.24.4"
macroquad = "0.3.24"
ciebii_lib = { path = "../ciebii_lib" }
